fixed notes overflowing bug all elements inside board should have same level of abstraction

--- a/frontend/src/app/document/components/board-style.css
+++ b/frontend/src/app/document/components/board-style.css
@@ -5,3 +5,10 @@
     margin: 0;
 }
 
+.container {
+    box-sizing: border-box;
+    max-height: 96%;
+    position: absolute;
+    overflow-x: visible;
+    overflow-y: auto;
+}
